--- a/index.html
+++ b/index.html
@@ -122,6 +122,41 @@
     </div>
     <div class="popular-foods__catalogue">
       <!--Javascript-->
+
+      <article class="popular-foods__card ">
+        <img class="popular-foods__card-image" src="assets/sushi-12.png" alt="sushi-12" />
+        <h4 class="popular-foods__card-title">Chezu Sushi</h4>
+        <div class="popular-foods__card-details flex-between">
+          <div class="popular-foods__card-rating">
+            <img src="assets/star.svg" alt="star">
+            <p>4.9</p>
+          </div>
+          <p class="popular-foods__card-price">$21.00</p>
+        </div>
+      </article>
+      <article class="popular-foods__card active-card">
+        <img class="popular-foods__card-image" src="assets/sushi-11.png" alt="sushi-11" />
+        <h4 class="popular-foods__card-title">Ramen Legrado</h4>
+        <div class="popular-foods__card-details flex-between">
+          <div class="popular-foods__card-rating">
+            <img src="assets/star.svg" alt="star">
+            <p>5.0</p>
+          </div>
+          <p class="popular-foods__card-price">$21.00</p>
+        </div>
+      </article>
+      <article class="popular-foods__card ">
+        <img class="popular-foods__card-image" src="assets/sushi-10.png" alt="sushi-10" />
+        <h4 class="popular-foods__card-title">Original Sushi</h4>
+        <div class="popular-foods__card-details flex-between">
+          <div class="popular-foods__card-rating">
+            <img src="assets/star.svg" alt="star">
+            <p>5.0</p>
+          </div>
+          <p class="popular-foods__card-price">$21.00</p>
+        </div>
+      </article>
+
     </div>
     <button class="popular-foods__button">
       Explore Food
