added subscribe section

--- a/index.html
+++ b/index.html
@@ -171,8 +171,7 @@
 
         <h3 class="sushi__title">Japanese Sushi
         </h3>
-        <p class="sushi__description">Feel the taste of the most delicious Sushi here.
-        </p>
+        <p class="sushi__description">Feel the taste of the most delicious Sushi here.</p>
 
         <ul class="trending__list flex-between">
           <li>
@@ -295,6 +294,38 @@
       </div>
     </section>
   </section>
+
+  <section class="subscription flex-center" id="services">
+    <h2 data-aos="flip-down">
+      Get offers stright <br />
+      to your inbox
+    </h2>
+    <p data-aos="fade-up">Sign up for the Sushiman newsletter</p>
+
+    <div class="subscription__form" data-aos="fade-up">
+      <input type="text" placeholder="Enter your email address" />
+      <button>Get Started</button>
+    </div>
+  </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <script src="/js/script.js" type="module"></script>
 </body>
